# template-default-repository-demo

./: .gitignore  .terraform.lock.hcl  DOCUMENTATION.md  HATCH.md  NX.md  README.ar.md  README.de.md  README.es.md  README.fr.md  README.hi.md  README.md  README.nl.md  README.zh-CN.md  README.zh-TW.md  REQUIREMENTS.md  cleanup.sh  index.html  main.tf  nx.json  package-lock.json  package.json  sample.terraform.tfvars  stack.yml  terraform.tfstate  workspace.json
.github/workflows/: ci.yml  deploy.yml  documentation.yml  readme.yml
.nx/cache/: run.json
.nx/workspace-data/: 711E1144-8E45-52C1-AB99-7CAE86E0B2CB.db  711E1144-8E45-52C1-AB99-7CAE86E0B2CB.db-shm  711E1144-8E45-52C1-AB99-7CAE86E0B2CB.db-wal  eslint-2654242865465226088.hash  file-map.json  jest-7930610538513362720.hash  lockfile.hash  nx_files.nxt  parsed-lock-file.json  playwright-5186013267177752385.hash  project-graph.json  source-maps.json  webpack-5621830741124012108.hash
.spacelift/: config.yml
300/: README.md
300/300/: README.md
300/400/: README.md
assets/: index-CIciTYxS.js  index-aYGWzX7z.js
foo-bar/: requirements.txt
hatch-project/: DELETE-nx.json  LICENSE.txt  README.md  nx.json  pyproject.toml
hatch-project/src/hatch_project/: README.md  __about__.py  __init__.py  nx.json  package-lock.json  package.json  project.json  tsconfig.app.json  workspace.json
hatch-project/src/hatch_project/apps/hatch_project/: jest.config.ts  project.json  webpack.config.js
hatch-project/src/hatch_project/apps/hatch_project-e2e/: playwright.config.ts  project.json
hatch-project/src/hatch_project/apps/hatch_project/src/: index.html
hatch-project/src/hatch_project/apps/hatch_project/src/app/: app.spec.tsx  app.tsx  nx-welcome.tsx
policies/: main.rego
(+12 files in other folders)
